<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.slava.calc.MainActivity"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/weight_zero"
            android:inputType="none"
            android:padding="@dimen/text_view_padding"
            android:textSize="@dimen/text_view_size"
            android:layout_weight="1"
            android:id="@+id/myTextView"
            android:maxLength="40"
            android:focusable="true" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="@dimen/weight_zero"
            android:orientation="vertical"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button1"
                    android:id="@+id/btnC"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button2"
                    android:id="@+id/btnDiv"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button3"
                    android:id="@+id/btnMult"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button4"
                    android:id="@+id/btnBack"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button5"
                    android:id="@+id/btn7"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button6"
                    android:id="@+id/btn8"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button7"
                    android:id="@+id/btn9"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button8"
                    android:id="@+id/btnMin"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button9"
                    android:id="@+id/btn4"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button10"
                    android:id="@+id/btn5"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button11"
                    android:id="@+id/btn6"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button12"
                    android:id="@+id/btnPlus"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button13"
                    android:id="@+id/btn1"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button14"
                    android:id="@+id/btn2"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button15"
                    android:id="@+id/btn3"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button20"
                    android:id="@+id/btnRes"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button17"
                    android:id="@+id/btn0"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button18"
                    android:id="@+id/btnDot"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button16"
                    android:id="@+id/btnBrack1"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="@dimen/weight_zero"
                    android:layout_height="match_parent"
                    android:text="@string/calc_button19"
                    android:id="@+id/btnBrack2"
                    android:textSize="@dimen/button_text_size"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
